[project]
name = "rag-agent-ex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[openai]>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "langchain-text-splitters>=1.1.0",
    "bs4>=0.0.2",
]
